Add POST fetch API call

--- a/src/styles.css
+++ b/src/styles.css
@@ -38,6 +38,13 @@ div {
 }
 
 article:nth-child(3),
-article:nth-child(4) {
+article:nth-child(4),
+article:nth-child(5), {
     margin-top: 2%;
+}
+
+.button-styling {
+    display: flex;
+    justify-content: center;
+    margin-top: 3%;
 }
