--- a/src/styles.css
+++ b/src/styles.css
@@ -15,12 +15,14 @@ article {
     background-color: #63D2FF;
     border-radius: 15px;
     margin: auto;
+    margin-top: 3%;
     width: 35%;
     max-width: 35%;
     height: 400px;
-    font-size: 1.25em;
+    font-size: 1.15em;
     text-align: center;
     color: #F7F9F9;
+    padding: 1%;
 }
 
 .animal-name {
@@ -37,8 +39,27 @@ div {
     justify-content: space-around;
 }
 
-article:nth-child(3),
-article:nth-child(4),
-article:nth-child(5), {
-    margin-top: 2%;
+.animalForm,
+.deleteAnimalForm {
+    text-align: center;
+    color: #F7F9F9;
+    margin-top: 10%;
+}
+
+.btn {
+    font-family: 'Poppins',
+    sans-serif;
+    width: 20%;
+    display: block;
+    margin: auto;
+    border-radius: 10px;
+    padding: 1%;
+    margin-top: 5%;
+    background-color: #2081C3;
+    color: #F7F9F9;
+    border: 3px solid #F7F9F9;
+}
+
+.hidden {
+    display: none;
 }
